Revert "Merge branch 'feature/v0.2-alpha' into develop"
This reverts commit 61eda5483ee89c7ccc0799aaf6aa59ec503695d5, reversing
changes made to 1142c880524ca9985e8cc2acbf72ff857f14ce48.

--- a/packages/ui-toolkit/01-settings/settings-colors/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-colors/index.scss
@@ -4,7 +4,7 @@
 
 /* These are not up to date. */
 
-$bolt-colors: (
+$palettes: (
   indigo: (
     xlight:  hsl(233, 100%, 90%), //#CCD2FF
     light:   hsl(233, 43%, 35%),  //#333C80
@@ -59,7 +59,7 @@ $bolt-colors: (
     dark:    hsl(51, 80%, 45%)    //#CFB317
   ),
   black: (
-    initial: #16171a
+    initial: #16171A
   ),
   white: (
     initial: #ffffff
