--- a/packages/ui-toolkit/05-objects/objects-grid/index.scss
+++ b/packages/ui-toolkit/05-objects/objects-grid/index.scss
@@ -2,26 +2,26 @@
    #GRID
    ========================================================================== */
 
-.o-bolt-grid {
+.o-grid {
   margin: 0;
   padding: 0;
   list-style: none;
-  margin-left: bolt-spacing(medium) * -1;
-  letter-spacing: bolt-spacing(medium) * -1;
+  margin-left: spacing(medium) * -1;
+  letter-spacing: spacing(medium) * -1;
   flex: 1 1 auto; //Automatically auto fill any available space, in case a grid is nested inside of a flexbox-friendly parent container.
 }
 
-.o-bolt-grid__item {
+.o-grid__item {
   display: inline-block;
   vertical-align: top;
-  padding-left: bolt-spacing(medium);
+  padding-left: spacing(medium);
   letter-spacing: normal;
 }
 
-.o-bolt-grid--rev {
+.o-grid--rev {
   direction: rtl;
 
-  > .o-bolt-grid__item {
+  > .o-grid__item {
     direction: ltr;
   }
 }
@@ -29,46 +29,46 @@
 
 /**
  * Gutterless grids have all the properties of regular grids, minus any spacing.
- * Extends `.o-bolt-grid`.
+ * Extends `.o-grid`.
  */
-.o-bolt-grid--full {
+.o-grid--full {
   margin-left: 0;
 
-  > .o-bolt-grid__item {
+  > .o-grid__item {
     padding-left: 0;
   }
 }
 
 /**
  * Centered grids align grid items centrally without needing to use push or pull
- * classes. Extends `.o-bolt-grid`.
+ * classes. Extends `.o-grid`.
  */
-.o-bolt-grid--center {
+.o-grid--center {
   text-align: center;
   justify-content: center;
 
-  > .o-bolt-grid__item {
+  > .o-grid__item {
     text-align: left;
   }
 }
 
 
 /**
- * Align grid cells vertically (`.o-bolt-grid--middle` or `.o-bolt-grid--bottom`). Extends
- * `.o-bolt-grid`.
+ * Align grid cells vertically (`.o-grid--middle` or `.o-grid--bottom`). Extends
+ * `.o-grid`.
  */
-.o-bolt-grid--middle {
-  // &.o-bolt-grid--flex,{
+.o-grid--middle {
+  // &.o-grid--flex,{
   //   align-items: center;
   // }
 
-  > .o-bolt-grid__item {
+  > .o-grid__item {
     vertical-align: middle;
   }
 }
 
-.o-bolt-grid--bottom {
-  > .o-bolt-grid__item {
+.o-grid--bottom {
+  > .o-grid__item {
     vertical-align: bottom;
   }
 }
@@ -77,26 +77,26 @@
 /**
  * Align the entire grid to the right. Extends `.grid`.
  */
-.o-bolt-grid--right {
+.o-grid--right {
   text-align: right;
   justify-content: flex-end;
 
-  > .o-bolt-grid__item {
+  > .o-grid__item {
     text-align: left;
   }
 }
 
-// .o-bolt-grid__item--middle {
+// .o-grid__item--middle {
 //   vertical-align: middle;
 //   align-self: center;
 // }
 
-// .o-bolt-grid__item--top {
+// .o-grid__item--top {
 //   vertical-align: top;
 //   align-self: flex-start;
 // }
 //
-// .o-bolt-grid__item--bottom {
+// .o-grid__item--bottom {
 //   vertical-align: bottom;
 //   align-self: flex-end;
 // }
@@ -105,41 +105,41 @@
 
 
 // Grid gutter sizes
-// .o-bolt-grid--xsmall {
-//   margin-left: bolt-spacing(xsmall) * -1;
+// .o-grid--xsmall {
+//   margin-left: spacing(xsmall) * -1;
 //
-//   > .o-bolt-grid__item {
-//     padding-left: bolt-spacing(xsmall);
+//   > .o-grid__item {
+//     padding-left: spacing(xsmall);
 //   }
 // }
 
-.o-bolt-grid--small {
-  margin-left: bolt-spacing(small) * -1;
+.o-grid--small {
+  margin-left: spacing(small) * -1;
 
-  > .o-bolt-grid__item {
-    padding-left: bolt-spacing(small);
+  > .o-grid__item {
+    padding-left: spacing(small);
   }
 }
 
 /**
  * Large gutters
  */
-.o-bolt-grid--large {
-  margin-left: bolt-spacing(large) * -1;
+.o-grid--large {
+  margin-left: spacing(large) * -1;
 
-  > .o-bolt-grid__item {
-    padding-left: bolt-spacing(large);
+  > .o-grid__item {
+    padding-left: spacing(large);
   }
 }
 
 /**
  * Extra wide gutters
  */
-.o-bolt-grid--xlarge {
-  margin-left: bolt-spacing(large) * -1;
+.o-grid--xlarge {
+  margin-left: spacing(large) * -1;
 
-  > .o-bolt-grid__item {
-    padding-left: bolt-spacing(large);
+  > .o-grid__item {
+    padding-left: spacing(large);
   }
 }
 
@@ -148,7 +148,7 @@
 //  * Extra extra wide gutters
 //  */
 // %o-grid--xxlarge,
-// .o-bolt-grid--xxlarge {
+// .o-grid--xxlarge {
 //
 //   @include respond-to(small) {
 //     margin-left: -$spacing-unit-xlarge * 2;
@@ -156,7 +156,7 @@
 //   margin-left: -$spacing-unit-large * 2;
 //
 //   > %o-grid__item,
-//   > .o-bolt-grid__item {
+//   > .o-grid__item {
 //
 //     @include respond-to(small) {
 //       padding-left: $spacing-unit-xlarge * 2;
@@ -165,11 +165,11 @@
 //   }
 // }
 
-.o-bolt-grid--flex {
+.o-grid--flex {
   display: flex;
   flex-flow: row wrap;
 
-  > .o-bolt-grid__item {
+  > .o-grid__item {
     display: flex;
     flex-direction: column;
   }
