--- a/packages/ui-toolkit/05-objects/objects-ui-list/index.scss
+++ b/packages/ui-toolkit/05-objects/objects-ui-list/index.scss
@@ -6,25 +6,25 @@
  * The UI list object creates blocky list items with a separator between each
  * item
  */
-$bolt-ui-list-padding: (small 0) !default;
-$bolt-ui-list-border-width: 2px !default;
-$bolt-ui-list-border-style: solid !default;
+$ui-list-padding: (small 0) !default;
+$ui-list-border-width: 2px !default;
+$ui-list-border-style: solid !default;
 // $ui-list-border-color: palette(gray, lighter) !default;
-$bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
+$ui-list-border-color: var(--bolt-ui-border-color, currentColor);
 
-.o-bolt-ui-list {
-  list-style: none;
+.o-ui-list {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
-.o-bolt-ui-list__item {
-  @include bolt-padding($bolt-ui-list-padding);
-  border-bottom-color: $bolt-ui-list-border-color;
-  border-bottom-style: $bolt-ui-list-border-style;
+.o-ui-list__item {
+  @include padding($ui-list-padding);
+  border-bottom-style: $ui-list-border-style;
+  border-bottom-color: $ui-list-border-color;
 
   &:not(:last-child) {
-    border-bottom-width: $bolt-ui-list-border-width;
+    border-bottom-width: $ui-list-border-width;
   }
 
   > *:last-child {
@@ -32,6 +32,6 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
   }
 }
 
-.o-bolt-ui-list--borderless {
+.o-ui-list--borderless {
   --bolt-ui-border-color: transparent;
 }
