--- a/packages/ui-toolkit/02-tools/_tools.clearfix.scss
+++ b/packages/ui-toolkit/02-tools/_tools.clearfix.scss
@@ -1,7 +1,7 @@
-@mixin bolt-clearfix {
+@mixin clearfix {
   &:before,
   &:after {
-    content: ' ';
+    content: " ";
     display: table;
   }
 
@@ -9,3 +9,11 @@
     clear: both;
   }
 }
+
+// @mixin paragraph-spacing {
+//   @include mm-margin(($font-leading--base + rem),0,0,0);
+// }
+//
+// @mixin null-spacing {
+//   @include mm-margin(0,0,0,0);
+// }
