--- a/packages/ui-toolkit/02-tools/tools-all/index.scss
+++ b/packages/ui-toolkit/02-tools/tools-all/index.scss
@@ -1,3 +1,6 @@
+// @import 'tools.get-function';
+// @import 'tools.squish';
+// @import 'tools.stretch';
 @import '@bolt/tools-strip-unit';
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-font-family';
@@ -8,7 +11,21 @@
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-color-palette';
 
-@mixin bolt-uppercase() {
+@mixin uppercase() {
   text-transform: uppercase;
-  letter-spacing: 0.1rem;
+  letter-spacing: .1rem;
+  // overflow-wrap: break-word;
+  // word-wrap: break-word;
+  // -ms-word-break: break-all;
+  //
+  // // This is the dangerous one in WebKit, as it breaks things wherever
+  // word-break: break-all;
+  // // Instead use this non-standard one
+  // word-break: break-word;
+  //
+  // /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  // -ms-hyphens: auto;
+  // -moz-hyphens: auto;
+  // -webkit-hyphens: auto;
+  // hyphens: auto;
 }
