--- a/packages/ui-toolkit/02-tools/tools-font-weight/index.scss
+++ b/packages/ui-toolkit/02-tools/tools-font-weight/index.scss
@@ -16,8 +16,8 @@
 /// @param {string} $weight
 ///   Defines the weight of the text: bold or regular.
 ///
-@mixin bolt-font-weight($weight) {
-  $font-weight: map-get-deep($bolt-font-weights, 'font-weights', $weight);
+@mixin font-weight($weight) {
+  $font-weight: map-get-deep($font-weights, 'font-weights', $weight);
 
   font-weight: $font-weight;
 }
