--- a/packages/ui-toolkit/02-tools/tools-spacing/_tools.spacing-padding.scss
+++ b/packages/ui-toolkit/02-tools/tools-spacing/_tools.spacing-padding.scss
@@ -1,29 +1,29 @@
 // @mixin spacing($)
 
-@mixin bolt-padding($sizes, $type: false, $important: false) {
+@mixin padding($sizes, $type: false, $important: false) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, $type);
   @include _bolt-directional-property(padding, false, $sizes, $important);
 }
 
-@mixin bolt-padding-top($sizes, $important: null) {
+@mixin padding-top($sizes, $important: null) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
   $sizes: nth($sizes, 1) null null null;
   @include _bolt-directional-property(padding, false, $sizes, $important);
 }
 
-@mixin bolt-padding-right($sizes, $important: null) {
+@mixin padding-right($sizes, $important: null) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
   $sizes: null nth($sizes, 2) null null;
   @include _bolt-directional-property(padding, false, $sizes, $important);
 }
 
-@mixin bolt-padding-bottom($sizes, $important: null) {
+@mixin padding-bottom($sizes, $important: null) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
   $sizes: null null nth($sizes, 1) null;
   @include _bolt-directional-property(padding, false, $sizes, $important);
 }
 
-@mixin bolt-padding-left($sizes, $important: null) {
+@mixin padding-left($sizes, $important: null) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
   $sizes: null null null nth($sizes, 2);
   @include _bolt-directional-property(padding, false, $sizes, $important);
