--- a/packages/ui-toolkit/04-elements/elements-headings/index.scss
+++ b/packages/ui-toolkit/04-elements/elements-headings/index.scss
@@ -7,7 +7,7 @@ h3,
 h4,
 h5,
 h6 {
-  @include bolt-font-family(heading);
-  @include bolt-font-size(large, tight);
-  @include bolt-font-weight(bold);
+  @include font-family(heading);
+  @include font-size(large, tight);
+  @include font-weight(bold);
 }
