--- a/packages/ui-toolkit/05-objects/objects-all/index.scss
+++ b/packages/ui-toolkit/05-objects/objects-all/index.scss
@@ -1,5 +1,5 @@
 @import '@bolt/objects-grid';
 @import '@bolt/objects-wrapper';
-// @import '@bolt/objects-island';
+@import '@bolt/objects-island';
 @import '@bolt/objects-inline-list';
 @import '@bolt/objects-ui-list';
