--- a/packages/ui-toolkit/05-objects/objects-wrapper/index.scss
+++ b/packages/ui-toolkit/05-objects/objects-wrapper/index.scss
@@ -1,18 +1,15 @@
-/**
-  * @define o-bolt-wrapper
-  */
+// $wrapper--max-width: map-get($breakpoints, large) !default;
+$wrapper--max-width: 1400px !default;
 
-$bolt-wrapper--max-width: 1400px !default;
+.o-wrapper {
+  @include padding-left(small);
+  @include padding-right(small);
+  @include margin-left(auto);
+  @include margin-right(auto);
+  max-width: $wrapper--max-width;
 
-.o-bolt-wrapper {
-  @include bolt-padding-left(small);
-  @include bolt-padding-right(small);
-  @include bolt-margin-left(auto);
-  @include bolt-margin-right(auto);
-  max-width: $bolt-wrapper--max-width;
-
-  @include respond-to(medium) {
-    @include bolt-padding-left(large);
-    @include bolt-padding-right(large);
+  @include respond-to(medium){
+    @include padding-left(large);
+    @include padding-right(large);
   }
 }
