--- a/packages/ui-toolkit/06-components/components-button/index.scss
+++ b/packages/ui-toolkit/06-components/components-button/index.scss
@@ -1,9 +1,6 @@
-/**
-  * Buttons
-  *
-  * @define c-bolt-button
-  */
-
+/* ------------------------------------ *\
+  #BUTTONS
+\* ------------------------------------ */
 @import '@bolt/tools-button-color';
 @import '@bolt/settings-global';
 @import '@bolt/tools-font-weight';
@@ -11,22 +8,22 @@
 @import '@bolt/tools-font-size';
 @import '@bolt/tools-spacing';
 
-$bolt-btn-border-radius: 4px !default;
-$bolt-btn-border-width: 1px !default;
-$bolt-btn-border-style: solid !default;
-$bolt-btn-border-color: currentColor !default;
-$bolt-btn-bg-color: palette(blue) !default;
-// $bolt-btn-border-color:  transparent !default;
-$bolt-btn-padding: spacing(large) !default;
-$bolt-btn-padding--small: $spacing-unit * 0.5 !default;
-$bolt-btn-padding--large: 18px !default;
-$bolt-btn-subtle-color: palette(blue) !default;
-$bolt-btn-subtle-font-weight: bold !default;
-$bolt-btn-subtle-font-size: base;
-$bolt-btn-font-weight: bold !default;
-$bolt-btn-icon--size: 1.5em !default;
-$bolt-btn-icon--size--small: $bolt-btn-icon--size !default;
-$bolt-btn-bg-color--flat: palette(blue);
+$btn-border-radius: 4px   !default;
+$btn-border-width: 1px   !default;
+$btn-border-style: solid !default;
+$btn-border-color: currentColor !default;
+$btn-bg-color: palette(blue) !default;
+// $btn-border-color:  transparent !default;
+$btn-padding: spacing(large) !default;
+$btn-padding--small: $spacing-unit * 0.5 !default;
+$btn-padding--large: 18px !default;
+$btn-subtle-color: palette(blue) !default;
+$btn-subtle-font-weight: bold !default;
+$btn-subtle-font-size: base;
+$btn-font-weight: bold !default;
+$btn-icon--size: 1.5em !default;
+$btn-icon--size--small: $btn-icon--size !default;
+$btn-bg-color--flat: palette(blue);
 
 
 /**
@@ -39,7 +36,7 @@ $bolt-btn-bg-color--flat: palette(blue);
  * 6. Subtract the border size from the padding value so that buttons do not
  *    grow larger as we add borders.
  */
-@mixin bolt-button($bolt-btn-padding: 9px $bolt-btn-padding) {
+@mixin button($btn-padding: 9px $btn-padding) {
   @include font-weight(semibold);
   @include no-select();
   @include font-size(medium);
@@ -49,14 +46,14 @@ $bolt-btn-bg-color--flat: palette(blue);
   }
   display: inline-block; /* [1] */
 
-  padding: $bolt-btn-padding;
+  padding: $btn-padding;
   text-align: center; /* [4] */
   cursor: pointer; /* [5] */
   text-decoration: none;
   vertical-align: middle; /* [2] */
-  border-style: $bolt-btn-border-style;
-  border-width: $bolt-btn-border-width;
-  border-radius: $bolt-btn-border-radius;
+  border-style: $btn-border-style;
+  border-width: $btn-border-width;
+  border-radius: $btn-border-radius;
   font: inherit; /* [3] */
   white-space: nowrap;
   transition: background-color 0.2s ease, border-color 0.2s ease, color 0.2s ease, opacity 0.2s ease;
@@ -71,7 +68,7 @@ $bolt-component-namespace: 'c-bolt-';
 
 .#{$bolt-component-namespace}button {
   @include button();
-  @include button-color($bolt-btn-bg-color);
+  @include button-color($btn-bg-color);
 }
 
 .#{$bolt-component-namespace}button--disabled,
@@ -110,14 +107,14 @@ $bolt-component-namespace: 'c-bolt-';
 
 // .c-button__icon {
 //   margin-right: 0.5em;
-//   width: $bolt-btn-icon--size;
-//   height: $bolt-btn-icon--size;
+//   width: $btn-icon--size;
+//   height: $btn-icon--size;
 //   flex-shrink: 0;
 // }
 //
 // .c-button__icon--small {
-//  width: $bolt-btn-icon--size--small;
-//  height: $bolt-btn-icon--size--small;
+//  width: $btn-icon--size--small;
+//  height: $btn-icon--size--small;
 // }
 //
 //
@@ -134,10 +131,10 @@ $bolt-component-namespace: 'c-bolt-';
 // .c-button--subtle {
 //   background-color: transparent;
 //   border-color: transparent;
-//   color: $bolt-btn-subtle-color;
-//   @include font-size($bolt-btn-subtle-font-size);
+//   color: $btn-subtle-color;
+//   @include font-size($btn-subtle-font-size);
 //
-//   @include font-weight($bolt-btn-subtle-font-weight);
+//   @include font-weight($btn-subtle-font-weight);
 //
 //   &:hover {
 //     background-color: rgba(palette(white), 0.2);
@@ -185,25 +182,25 @@ $bolt-component-namespace: 'c-bolt-';
 //
 // %c-button--large,
 // .c-button--large {
-//   padding-top: $bolt-btn-padding--large - $bolt-btn-border-width;
-//   padding-bottom: $bolt-btn-padding--large - $bolt-btn-border-width;
-//   padding-left: ($bolt-btn-padding--large * 2) - $bolt-btn-border-width;
-//   padding-right: ($bolt-btn-padding--large * 2) - $bolt-btn-border-width;
+//   padding-top: $btn-padding--large - $btn-border-width;
+//   padding-bottom: $btn-padding--large - $btn-border-width;
+//   padding-left: ($btn-padding--large * 2) - $btn-border-width;
+//   padding-right: ($btn-padding--large * 2) - $btn-border-width;
 //
 //   @include respond-to(small) {
-//     padding-left: ($bolt-btn-padding--large * 4) - $bolt-btn-border-width;
-//     padding-right: ($bolt-btn-padding--large * 4) - $bolt-btn-border-width;
+//     padding-left: ($btn-padding--large * 4) - $btn-border-width;
+//     padding-right: ($btn-padding--large * 4) - $btn-border-width;
 //   }
 // }
 //
 // %c-button--small,
 // .c-button--small {
-//   padding: ($bolt-btn-padding--small - $bolt-btn-border-width) (($bolt-btn-padding--small * 2) - $bolt-btn-border-width);
+//   padding: ($btn-padding--small - $btn-border-width) (($btn-padding--small * 2) - $btn-border-width);
 // }
 //
 // %c-button--xsmall,
 // .c-button--xsmall {
-//   padding: 0 (($bolt-btn-padding--small) - $bolt-btn-border-width);
+//   padding: 0 (($btn-padding--small) - $btn-border-width);
 // }
 //
 // %c-button--center,
