--- a/packages/ui-toolkit/06-components/components-page-footer/index.scss
+++ b/packages/ui-toolkit/06-components/components-page-footer/index.scss
@@ -4,6 +4,6 @@
 
 // Provides over-arching page footer
 
-.c-bolt-page-footer {
-  @include bolt-padding(medium 0);
+.c-page-footer {
+  @include padding(medium 0);
 }
