--- a/packages/ui-toolkit/06-components/components-site/index.scss
+++ b/packages/ui-toolkit/06-components/components-site/index.scss
@@ -2,15 +2,7 @@
   #SITE WRAPPER
 \* ------------------------------------ */
 
-/**
- * Bolt > Components > Site Wrapper
- * Provides page wrapper + sticky footer functionality
- *
- * @define c-bolt-site
- *
- */
-
-
+// Provides over-arching page wrapper + sticky footer functionality
 /**
  * 1. Avoid the IE 10-11 `min-height` bug.
  * 2. Set `flex-shrink` to `0` to prevent some browsers from
@@ -25,7 +17,7 @@
 //   // --bg-color: hsl(150, 45%, 50%);
 // }
 
-.c-bolt-site {
+.c-site {
   display: grid;
   // display: flex;
   // flex-direction: column;
@@ -46,26 +38,50 @@
 
 
 
-.c-bolt-site__header {
+.c-site__header {
   grid-area: header;
 }
 
-.c-bolt-site__header {
-
-}
-
-.c-bolt-site__footer {
+.c-site__footer {
   grid-area: footer;
 }
 
-.c-bolt-site__content {
+.c-site__content {
   grid-area: content;
   width: 100%;
   // grid-column: 2 / -2;
 }
 
-.c-bolt-site__content--middle {
+.c-site__content--middle {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+// .c-site__header,
+// .c-site__footer {
+//   flex: none; /* 2 */
+//   width: 100%;
+// }
+//
+// .c-site__content {
+//   flex-grow: 1; /* 2 */
+//   flex-shrink: 0; /* 2 */
+//   flex-basis: auto; /* 2 */
+//   width: 100%;
+// }
+//
+// .c-site__content:after {
+//   content: '\00a0'; /* &nbsp; */
+//   display: block;
+//   height: 0;
+//   visibility: hidden;
+// }
+
+// .c-site__content--full {
+//   padding: 0;
+// }
+//
+// .c-site__content--full:after {
+//   content: none;
+// }
