--- a/packages/ui-toolkit/08-utilities/utilities-spacing/index.scss
+++ b/packages/ui-toolkit/08-utilities/utilities-spacing/index.scss
@@ -1,3 +1,4 @@
+$direction-index: 0;
 @each $property in $bolt-spacing-properties {
   @for $i from 1 through length($bolt-spacing-directions) {
     $direction: nth($bolt-spacing-directions, $i);
@@ -7,18 +8,19 @@
 
         $sizeText: $size;
 
-        @if ($direction != null and $direction != '') {
+        @if ($direction != null and $direction != ''){
           $type: null;
           $sizeText: '-' + $size;
         }
 
-        .u-bolt-#{$property}#{$direction}#{$sizeText}#{$type} {
+        .u-#{$property}#{$direction}#{$sizeText}#{$type} {
 
           $sizes: null null null null;
 
+
           $size-index: index($bolt-spacing-directions, $direction);
 
-          @if ($direction != null) {
+          @if ($direction != null){
             $sizes: set-nth($sizes, $size-index - 1, $size);
           } @else {
             // @debug #{$property}#{$direction}#{$size}#{$type};
