fix: merging latest colors work in

--- a/packages/ui-toolkit/01-settings/settings-colors/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-colors/index.scss
@@ -48,12 +48,12 @@ $bolt-colors: (
     initial: hsl(121, 41%, 35%),  //#357E36
     dark:    hsl(120, 41%, 25%)   //#265A26
   ),
-  warning: (
+  error: (
     light:   hsl(3, 76%, 90%),    //#F9D4D2
     initial: hsl(6, 76%, 40%),    //#B42818
     dark:    hsl(6, 76%, 35%)     //#9D2315
   ),
-  error: (
+  warning: (
     light:   hsl(51, 80%, 90%),   //#FAF4D1
     initial: hsl(51, 80%, 55%),   //#E8CD30
     dark:    hsl(51, 80%, 45%)    //#CFB317
@@ -63,6 +63,9 @@ $bolt-colors: (
   ),
   white: (
     initial: #ffffff
+  ),
+  transparent: (
+    initial: transparent
   ),
   inherit: (
     initial: inherit
