--- a/packages/build-tools/build-styles/tests/basics/dest/style.css
+++ b/packages/build-tools/build-styles/tests/basics/dest/style.css
@@ -1,19 +1,1 @@
-body {
-  z-index: 42;
-}
-
-.c-site {
-  padding: 12px;
-}
-
-/* stylelint-disable declaration-no-important  */
-/* stylelint-disable declaration-no-important  */
-.u-test-hide {
-  display: none !important;
-}
-
-.u-test-show {
-  display: block !important;
-}
-
-/* stylelint-enable */
+body{z-index:42}.c-site{padding:12px}.u-test-hide{display:none!important}.u-test-show{display:block!important}
